<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="@drawable/product_bg_shape">

    <ImageView
        android:id="@+id/like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:src="@drawable/heart_unselected_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

<!--    TODO заменить на ViewPager    -->
    <ImageView
        android:id="@+id/product_image"
        android:layout_width="168dp"
        android:layout_height="150dp"
        android:alpha="0.8"
        android:src="@drawable/product_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:fontFamily="@font/sf_pro_display_regular"
        android:text="@string/price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_image"
        />

    <LinearLayout
        android:id="@+id/price_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price"
        app:layout_constraintBottom_toTopOf="@+id/product_title"
        >

        <TextView
            android:id="@+id/price_with_discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="489р"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_images"
            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/discount_bg_shape"
            android:layout_marginStart="10dp"
            android:paddingVertical="4dp"
            android:paddingHorizontal="8dp"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            >

            <TextView
                android:id="@+id/discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:alpha="0.9"
                android:fontFamily="@font/sf_pro_display_regular"
                android:text="@string/discount"
                />

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/product_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/sf_pro_display_regular"
        android:text="@string/product_title"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_frame"
        />

    <TextView
        android:id="@+id/product_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/product_description"
        android:alpha="0.9"
        android:textSize="12sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_title"
        />

    <LinearLayout
        android:id="@+id/feedback_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:gravity="start|center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_description"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/star_icon" />

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="4.5"
            android:layout_marginHorizontal="3dp"
            android:textColor="@color/elements_orange"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_images"
            />

        <TextView
            android:id="@+id/rating_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/rating_count"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_images"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>